# KK_exec

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
cli/: execute_command.py  get_oauth_url.sh  run_command.sh
scripts/: test_mcp_gateway.py  test_notion_direct.py  test_notion_flow.py
src/: __init__.py  config.py  main.py
src/api/: CLAUDE.md  deps.py
src/api/routes/: __init__.py  auth.py  credentials.py  executions.py  mcp.py  nodes.py  oauth.py  workflows.py
src/core/: CLAUDE.md  __init__.py  encryption.py  execution_engine.py  node_selector.py  workflow_builder.py
src/integrations/: __init__.py  base.py  registry.py
src/integrations/github/: __init__.py  oauth.py
src/integrations/notion/: __init__.py  oauth.py
src/integrations/slack/: __init__.py  oauth.py
src/mcp/: CLAUDE.md  __init__.py  credential_injector.py  server_registry.py  transports.py
src/models/: CLAUDE.md  __init__.py  credential.py  execution.py  node.py  user.py  workflow.py
src/nodes/: CLAUDE.md  __init__.py  base.py  registry.py
src/nodes/apis/: __init__.py  anthropic.py  openai.py  weather.py
src/nodes/mcp/: __init__.py  filesystem.py  github.py  notion.py  slack.py
src/nodes/tools/: __init__.py  calculator.py  json_transformer.py  text_processor.py
src/services/: CLAUDE.md  __init__.py  credential_service.py  execution_service.py  mcp_gateway.py  node_library.py  oauth_service.py  workflow_service.py
tests/: __init__.py  conftest.py  test_notion_debug.sh  test_notion_local.sh  test_notion_oauth.py  test_oauth_curl.sh
tests/test_api/: test_workflows.py
tests/test_core/: test_encryption.py
tests/test_services/: test_node_library.py
